--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@nguniversal/express-engine": "^9.1.0",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "jquery": "^3.5.0",
